<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="montserrat.marcet.horarimanager.ChoiceActivity">

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/tanca_sessio" />

    <Button
        android:id="@+id/btn_crear_horari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logout"
        android:layout_marginTop="38dp"
        android:text="@string/btn_st_crear" />

    <TextView
        android:id="@+id/txt_carrega_horari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_crear_horari"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/chose_horari"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/HorariList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txt_carrega_horari" />

</RelativeLayout>
