<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="montserrat.marcet.horarimanager.SubjectsActivity">

    <Spinner
        android:id="@+id/sp_graus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="31dp" />

    <Button
        android:id="@+id/btn_validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="13dp"
        android:text="@string/btn_validate"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btn_cleaner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btn_validate"
        android:layout_marginStart="12dp"
        android:onClick="onClickNeteja"
        android:text="@string/btn_cleaner" />

    <EditText
        android:id="@+id/id_anomena_horai"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_cleaner"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/anomena_horari"
        android:inputType="textPersonName"
        android:maxLength="12"
        android:maxLines="1"
        android:selectAllOnFocus="false"
        android:windowSoftInputMode="stateHidden|adjustPan"/>

    <ExpandableListView
        android:id="@+id/subject_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_validate"
        android:layout_below="@+id/sp_graus"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
