<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context="montserrat.marcet.horarimanager.ViewActivity">

        <LinearLayout
            android:id="@+id/layoutTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_titol_final"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:paddingBottom="3sp"
                    android:paddingLeft="5dp"
                    android:paddingTop="5sp"
                    android:text="@string/titol_final"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textSize="21sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTabla"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="4sp">

            <ScrollView
                android:id="@+id/scrollvertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scrollbars="vertical">

                <HorizontalScrollView
                    android:id="@+id/scrollhorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scrollbars="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TableLayout
                            android:id="@+id/tabla"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="3dp"></TableLayout>

                        <Spinner
                            android:id="@+id/sp_graus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginTop="15dp"
                            android:spinnerMode="dialog" />

                        <TextView
                            android:id="@+id/Text_view_inf_ad"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="7dp"
                            android:paddingLeft="4dp"
                            android:text="@string/inf_ad"
                            android:textColor="@color/common_google_signin_btn_text_dark_focused"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="4dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/Txt_view_assig"
                                android:layout_width="90dp"
                                android:layout_height="wrap_content"
                                android:text="@string/assignatura"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_assig"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:text="TextView" />

                            <TextView
                                android:id="@+id/Txt_view_idioma"
                                android:layout_width="85dp"
                                android:layout_height="wrap_content"
                                android:text="@string/idioma"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_idioma"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TextView" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/Txt_view_aula"
                                android:layout_width="90dp"
                                android:layout_height="wrap_content"
                                android:text="@string/aula"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_aula"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:text="TextView" />

                            <TextView
                                android:id="@+id/Txt_view_prof"
                                android:layout_width="85dp"
                                android:layout_height="wrap_content"
                                android:text="@string/prof"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_prof"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="TextView" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/Txt_view_tipus"
                                android:layout_width="90dp"
                                android:layout_height="wrap_content"
                                android:text="@string/tipus"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_tipus"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:text="TextView" />

                            <TextView
                                android:id="@+id/Txt_view_codi"
                                android:layout_width="85dp"
                                android:layout_height="wrap_content"
                                android:text="@string/codi"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_codi"
                                android:layout_width="72dp"
                                android:layout_height="wrap_content"
                                android:text="TextView" />

                        </LinearLayout>

                    </LinearLayout>

                </HorizontalScrollView>
            </ScrollView>

        </LinearLayout>

    </LinearLayout>


