<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="montserrat.marcet.horarimanager.CreationActivity">

    <LinearLayout
        android:id="@+id/layoutTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:clickable="false"
                android:paddingBottom="3sp"
                android:paddingLeft="3dp"
                android:paddingTop="5sp"
                android:text="@string/titol"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="21sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_acceptar_horari"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/lima"
                android:text="@string/accepta_horari" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutTabla"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="4sp">

        <ScrollView
            android:id="@+id/scrollvertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scrollbars="vertical">

            <HorizontalScrollView
                android:id="@+id/scrollhorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scrollbars="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TableLayout
                        android:id="@+id/tabla"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dp"></TableLayout>

                    <TextView
                        android:id="@+id/titol_grups"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="7dp"
                        android:text="@string/triar_grup"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="4dp"
                        android:orientation="horizontal">

                        <ListView
                            android:id="@+id/asignaturas"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_weight="1" />

                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>
        </ScrollView>

    </LinearLayout>

</LinearLayout>


